apps/rustpad/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: rustpad
          image: ekzhang/rustpad
          ports:
            - containerPort: 3030
      restartPolicy: Always
