apps/rustpad/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default

  ports:
    - name: "3030"
      port: 3030
      targetPort: 3030
